更新了一些回溯问题，把 Stack 的实现类改成 Deque。