@@ -1,4 +1,6 @@
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.List;
 
 public class Solution2 {
@@ -7,11 +9,13 @@ public class Solution2 {
 
     public List<List<Integer>> combine(int n, int k) {
         // 特判
-        if (n <= 0 && k <= 0 && k > n) {
+        if (k <= 0 && k > n) {
             return result;
         }
+
+        Deque<Integer> path = new ArrayDeque<>(k);
         // 从 1 开始
-        generateCombinations(n, k, 1, new ArrayList<>());
+        dfs(n, k, 1, path);
         return result;
     }
 
@@ -21,17 +25,17 @@ public class Solution2 {
      * @param n     从 [1,n] 中选
      * @param k     选出的数字的个数
      * @param start 当前被选中的起始数字
-     * @param pre   已经构成的数字列表
+     * @param path   已经构成的数字列表
      */
-    private void generateCombinations(int n, int k, int start, List<Integer> pre) {
-        if (pre.size() == k) {
-            result.add(new ArrayList<>(pre));
+    private void dfs(int n, int k, int start, Deque<Integer> path) {
+        if (path.size() == k) {
+            result.add(new ArrayList<>(path));
             return;
         }
         for (int i = start; i <= n; i++) {
-            pre.add(i);
-            generateCombinations(n, k, i + 1, pre);
-            pre.remove(pre.size() - 1);
+            path.addLast(i);
+            dfs(n, k, i + 1, path);
+            path.removeLast();
         }
     }
 
