@@ -7,28 +7,29 @@ public class Solution {
 
     // 回溯
 
-    public List<List<Integer>> backtracking(int[] nums) {
+    public List<List<Integer>> dfs(int[] nums) {
         int len = nums.length;
         List<List<Integer>> res = new ArrayList<>();
         if (len == 0) {
             return res;
         }
-        backtracking(nums, len, 0, new ArrayDeque<>(), res);
+
+        Deque<Integer> path = new ArrayDeque<>();
+        dfs(nums, len, 0, path, res);
         return res;
     }
 
-    private void backtracking(int[] nums, int len, int step, Deque<Integer> path, List<List<Integer>> res) {
-        if (step == len) {
+    private void dfs(int[] nums, int len, int depth, Deque<Integer> path, List<List<Integer>> res) {
+        if (depth == len) {
             res.add(new ArrayList<>(path));
             return;
         }
-        // 不选 nums[step]
-        backtracking(nums, len, step + 1, path, res);
-        path.push(nums[step]);
-        // 选 nums[step]
-        backtracking(nums, len, step + 1, path, res);
+        // 不选 nums[depth]
+        dfs(nums, len, depth + 1, path, res);
+        path.addLast(nums[depth]);
+        // 选 nums[depth]
+        dfs(nums, len, depth + 1, path, res);
         // 状态重置
-        path.remove(path.size() - 1);
+        path.removeLast();
     }
-
 }
